<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>romaa_driver</name>
  <version>0.0.0</version>
  <description>The romaa_driver ROS 2 package

    This package contains the romaa_driver node.</description>
  <maintainer email="martin.nievas.ar@gmail.com">martin</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
